# mlops-assignment-2

./: REPORT.md  pyproject.toml
agent/: graph.py  prompts.py  schema.py  server.py
evals/: run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
results/: eval_after_tuning.json  eval_baseline.json  load_after.json  load_baseline.json  load_baseline2.json
scripts/: start_vllm.sh
